# bilibili-downloader-rs

./: .gitignore  Cargo.toml  README.md  index.html  package.json
.github/workflows/: publish.yml
core/: Cargo.toml
core/src/: config.rs  controller.rs  downloader.rs  executor.rs  headers.rs  helper.rs  lib.rs  message.rs  process.rs  state.rs  task.rs
src/: App.vue  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Downloader.vue  Greet.vue  TaskCard.vue
src/views/: Config.vue  Downloader.vue
tests/: downloader_tests.rs  task_tests.rs
