[workspace]
members = ["src-tauri", "core"]

[workspace.package]
version = "0.0.5"
repository = "https://github.com/kingwingfly/bilibili-downloader-rs"
authors = ["Louis <20200581@cqu.edu.cn>"]
license = ""

[workspace.dependencies]
once_cell = "1.17.1"
tauri-build = { version = "1.3", features = [] }
tauri = { version = "1.3", features = [] }
