[package]
name = "core-api"
# version = "0.0.5"
version.workspace = true
edition = "2021"

[[test]]
name = "downloader_tests"
path = "../tests/downloader_tests.rs"

[[test]]
name = "task_tests"
path = "../tests/task_tests.rs"

[dependencies]
tokio = { version = "1", features = [
    "fs",
    "process",
    "rt-multi-thread",
    "macros",
] }
serde = { version = "1.0", features = [] }
serde_json = "1.0"
reqwest = { version = "0.11.16", features = ["gzip"] }
regex = "1.6.0"
tauri = { workspace = true }
once_cell = { workspace = true }
keyring = "2"
sanitize-filename = "0.4.0"
