[package]
name = "bili_downloader"
version = "0.0.4"
description = "A Tauri App"
authors = ["Louis <20200581@cqu.edu.cn>"]
license = ""
default-run = "bili_downloader"
repository = "https://github.com/kingwingfly/bilibili-downloader-rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }


[dependencies]
tauri = { version = "1.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.17.1"
core-api = { path = "../core" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
