[package]
name = "bili_downloader"
# version = "0.0.5"
version.workspace = true
description = "A Tauri App"
authors.workspace = true
license.workspace = true
default-run = "bili_downloader"
repository.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }


[dependencies]
tauri = { version = "1.3", features = [] }
once_cell = "1.17.1"
core-api = { path = "../core" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
